fix service columns on small devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -142,15 +142,17 @@ footer a:hover {
   padding-right: 15%;
 }
 
-.columns {
-	-webkit-column-count: 2; /* Chrome, Safari, Opera */
-	-moz-column-count:    2; /* Firefox */
-	column-count:         2;
-  -webkit-column-gap:   20px; /* Chrome, Safari, Opera */ 
-	-moz-column-gap:      20px; /* Firefox */
-	column-gap:           20px;
-	column-rule-color: #ccc; /* Optional */
-	column-rule-style:solid; /* Optional */
-	column-rule-width: 1px; /* Optional */
-	text-align: justify; /* Optional */
+@media (min-width: 768px) {
+  .columns {
+    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count:    2; /* Firefox */
+    column-count:         2;
+    -webkit-column-gap:   20px; /* Chrome, Safari, Opera */ 
+    -moz-column-gap:      20px; /* Firefox */
+    column-gap:           20px;
+    column-rule-color: #ccc; /* Optional */
+    column-rule-style:solid; /* Optional */
+    column-rule-width: 1px; /* Optional */
+    text-align: justify; /* Optional */
+  }
 }
